--- a/style.scss
+++ b/style.scss
@@ -13,13 +13,21 @@
 /* BASE RULES */
 /**************/
 
+/* Prevent scroll on narrow devices */
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
+  font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 100%;
 }
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  //font: 18px/1.4 $helvetica;
+  font: 18px/1.4 Georgia;
   color: $darkGray;
 }
 
@@ -66,6 +74,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  font: 18px/1.4 Georgia;
 }
 
 a {
@@ -267,7 +276,24 @@ nav {
 
   .read-more {
     text-transform: uppercase;
+    font: 18px/1.4 $helvetica;
     font-size: 15px;
+    font-style: italic;
+    opacity: 0.8;
+  }
+
+  .indextime {
+    font-size: 15px;
+    text-align: right;
+    //margin: 20px;
+    padding: 19px;
+    float: right;
+    font-weight:normal;
+  }
+
+  .indextitle {
+    display: inline;
+    text_align: left;
   }
 }
 
@@ -287,3 +313,29 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+
+// For tag cloud and archives
+.tag-cloud {
+  list-style: none;
+  padding: 0;
+  text-align: justify; 
+  font-size: 16px;
+  li {
+    display: inline-block;
+    margin: 0 12px 12px 0; 
+  }
+}
+#archives {
+  padding: 5px;
+}
+.archive-group {
+  margin: 5px;
+  border-top: 1px solid #ddd;
+}
+.archive-item {
+  margin-left: 5px;
+}
+.post-tags {
+  text-align: right;
+  font-size: 14px;
+}
