--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -26,7 +27,7 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <nav>
+          <nav class="animated fadeIn">
             <a href="{{ site.baseurl }}/tags/index.html">Archives</a>
             <a href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
             <a href="{{ site.baseurl }}/about">About</a>
