--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import "frontpage";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -20,14 +21,14 @@ body {
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 100%;
 }
 
 body {
 	background: $white;
   //font: 18px/1.4 $helvetica;
-  font: 18px/1.4 Georgia;
+  font: 18px/1.4 'Open Sans';
   color: $darkGray;
 }
 
@@ -74,7 +75,8 @@ h4 {
 
 p {
   margin: 15px 0;
-  font: 18px/1.4 Georgia;
+  font: 18px/1.4 'Open Sans';
+  line-height: 105%
 }
 
 a {
@@ -234,7 +236,8 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    //color: $darkGray;
+    color: white;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
