edit profile photo

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -25,7 +25,8 @@
         </ul>
       </div> -->
       <div id="headerblob">
-        <img src="https://farm8.staticflickr.com/7613/16744097410_03d60f66ef.jpg" class="img-profile img-circle imgme ">
+        <!-- <img src="https://farm8.staticflickr.com/7613/16744097410_03d60f66ef.jpg" class="img-profile img-circle imgme "> -->
+        <img src="{{ site.avatar }}" class="img-profile img-circle imgme ">
         <div id="headertext">
           <div id="htname">{{ site.name }}</div>
           <div id="htdesc">{{ site.description }}</div>
