--- a/_sass/_theorem.scss
+++ b/_sass/_theorem.scss
@@ -25,9 +25,21 @@
     font-style: normal;
 }
 
+.claim {
+    display: block;
+    margin: 12px 0;
+    font-style: italic;
+}
+.claim:before {
+    content: "Claim.";
+    font-weight: bold;
+    font-style: normal;
+}
+
 .proof {
     display: block;
     margin: 12px 0;
+    font-weight: lighter;
     font-style: normal;
 }
 .proof:before {
