--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,8 @@
 @import "reset";
 @import "variables";
 @import "frontpage";
+@import "theorem";
+
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
