--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ h4 {
 p {
   margin: 15px 0;
   font: 18px/1.4 'Open Sans';
-  line-height: 105%
+  //line-height: 105%
 }
 
 a {
@@ -344,3 +344,4 @@ footer {
   font-size: 14px;
 }
 
+// Section numbering
