add font-awsome icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400, 300, 600' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
@@ -27,9 +28,9 @@
           </div>
 
           <nav class="animated fadeIn">
-            <a href="{{ site.baseurl }}/tags/index.html">Archives</a>
-            <a href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a class = "fa fa-archive" href="{{ site.baseurl }}/tags/index.html">Archives</a>
+            <a class = "fa fa-pencil" href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
+            <a class = "fa fa-thumbs-up" href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
