--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
@@ -31,23 +31,13 @@
           <div id="htname">{{ site.name }}</div>
           <div id="htdesc">{{ site.description }}</div>
           <div id="htem">jennifer.w0930_at_gmail.com</div>
-<!--           <div id="icons">
-            <div class="svgico">
-              <a href="https://twitter.com/karpathy"><img src="icons/03-twitter.svg"></a>
-            </div>
-            <div class="svgico">
-              <a href="https://plus.google.com/+AndrejKarpathy/posts"><img src="icons/80-google-plus.svg"></a>
-            </div>
-            <div class="svgico">
-              <a href="https://github.com/karpathy"><img src="icons/octocat.svg" width="56px"></a>
-            </div>
-          </div> -->
+
         </div>
           <div class="container">
             <nav>
-              <a class="nav_link" href="{{ site.baseurl }}/tags/index.html">Archives</a>
-              <a class="nav_link" href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
-              <a class="nav_link" href="{{ site.baseurl }}/about">About</a>
+            <a class = "fa fa-archive nav_link" href="{{ site.baseurl }}/tags/index.html">Archives</a>
+            <a class = "fa fa-pencil nav_link" href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
+            <a class = "fa fa-thumbs-up nav_link" href="{{ site.baseurl }}/about">About</a>
             </nav>
           </div>
       </div>
