--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -80,7 +80,15 @@
 .nav_link {
   //border: 2px solid;
   //border-radius: 5px;
-  text-decoration: underline;
+  //text-decoration: underline;
   color: white;
-  //display: inline-block;
+
+  @include mobile {
+    float: none;
+    margin-top: 9px;
+    display: block;
+    font-size: 16px;
+    color: $darkGray;
+  }
 }
+
