--- a/style.scss
+++ b/style.scss
@@ -336,10 +336,10 @@ footer {
 }
 .archive-group {
   margin: 5px;
-  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 .archive-item {
-  margin-left: 5px;
+  margin-left: 15px;
 }
 .post-tags {
   text-align: right;
