--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,12 @@
         <header class="masthead clearfix">
           <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a> -->
 
-          <div class="site-info">
+<!--           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
-          </div>
-
+          </div> -->
           <nav class="animated fadeIn">
+            <a class = "fa fa-home" href="{{ site.baseurl }}/">Home</a>
             <a class = "fa fa-archive" href="{{ site.baseurl }}/tags/index.html">Archives</a>
             <a class = "fa fa-pencil" href="{{ site.baseurl }}/algorithm.html">Algorithm</a>
             <a class = "fa fa-thumbs-up" href="{{ site.baseurl }}/about">About</a>
