--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,3 +16,5 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+
+    <meta property="og:image" content="{% if page.thumbnail %}{{ page.thumbnail | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.thumbnail| prepend: site.baseurl | prepend: site.url }}{% endif %}">
