--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -17,5 +17,5 @@
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
 
-    <meta property="og:image" content="{% if page.thumbnail %}{{ page.thumbnail | prepend: site.baseurl | prepend: site.url }}{% else %}{{ {{site.thumbnail}} | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+    <meta property="og:image" content="{{ site.thumbnail }}">
 
