--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -19,4 +19,4 @@
 
 <!--     <meta property="og:image" content="{% if page.thumbnail %}{{ page.thumbnail | prepend: site.baseurl | prepend: site.url }}{% else %}{{ {{site.baseurl}}{{site.thumbnail}} | prepend: site.baseurl | prepend: site.url }}{% endif %}">
  -->
-    <meta property="og:image" content="{{site.baseurl}}{{site.thumbnail}}">
+    <meta property="og:image" content="{{site.thumbnail}}">
