--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-
+    <img src="{{ site.thumbnail }}" style="display: none;" >
     <div id="header" class="bg1">
 <!--       <div id="topnav">
         <ul>
