--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,7 +26,7 @@ $georgia: Georgia, serif;
   }
 }
 
-// FontAusome
+// FontAwesome
 // --------------------------
 
 $fa-font-path:        "../fonts" !default;
