--- a/style.scss
+++ b/style.scss
@@ -112,8 +112,13 @@ ul ul, ol ul {
   list-style-type: circle;
 }
 
-em, i {
+i {
   font-style: italic;
+}
+
+em {
+  font-style: italic;
+  font-weight: bold;
 }
 
 strong, b {
